--- a/2022.html
+++ b/2022.html
@@ -253,6 +253,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title text-blue-custom">Fotos Etapa 1</h5>
                                             <a href="https://photos.app.goo.gl/8ffDDrFVGARTX2FZA" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 1 (TusResulta2)</a>
+                                            <a href="https://www.facebook.com/media/set/?set=a.625736632356701&type=3" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 1 (AristaRun)</a>
                                         </div>
                                     </div>
                                 </div>
@@ -261,6 +262,8 @@
                                         <div class="card-body">
                                             <h5 class="card-title text-blue-custom">Fotos Etapa 2</h5>
                                             <a href="https://photos.app.goo.gl/ca82wCFpud4xXVxCA" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (TusResulta2)</a>
+                                            <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.626630285600669" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (AristaRun)</a>
+                                            <a href="https://www.facebook.com/media/set/?set=a.10229918160963991&type=3" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (Alberto Alcántara)</a>
                                         </div>
                                     </div>
                                 </div>
@@ -269,6 +272,18 @@
                                         <div class="card-body">
                                             <h5 class="card-title text-blue-custom">Fotos Etapa 3</h5>
                                             <a href="https://photos.app.goo.gl/NAXD2v5g5H7tN8y89" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 3 (TusResulta2)</a>
+                                            <a href="https://www.facebook.com/media/set/?set=a.627472628849768&type=3" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 3 (AristaRun)</a>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 col-12">
+                                    <div class="card margin-bottom-20px yellow-light-custom-bg">
+                                        <div class="card-body">
+                                            <h5 class="card-title text-blue-custom">Fotos Senderismo</h5>
+                                            <a href="https://photos.app.goo.gl/ca82wCFpud4xXVxCA" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (TusResulta2)</a>
+                                            <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.626630285600669" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (AristaRun)</a>
+                                            <a href="https://www.facebook.com/media/set/?set=a.10229918160963991&type=3" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (Alberto Alcántara)</a>
                                         </div>
                                     </div>
                                 </div>
@@ -310,95 +325,152 @@
     <!-- FOOTER -->
     <footer class="site-footer blue-custom-bg">
         <div class="container">
+
             <div class="row">
+
                 <div class="col-12">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners 2024</h2>
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores Principales 2024</h2>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-4">
-                    <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-4">
-                    <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                <div class="row">
+                    <div class="col-4">
+                        <a href="https://www.spg-pack.com/" target="_blank"><img src="./images/spg-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-4">
+                        <a href="https://www.innovaocular.com/" target="_blank"><img src="./images/innovaocular-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-4">
+                        <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
+                <div class="col-12">
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners Institucionales 2024</h2>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.juntadeandalucia.es/organismos/turismoculturaydeporte.html" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://tdahcordoba.es/" target="_blank"><img src="./images/tdah-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-5">
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.ajeandalucia.org/cordoba/" target="_blank"><img src="./images/aje-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-5">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2024</h3>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <a href="https://www.facebook.com/p/Grupo-Corpodat-SPM-100063693216622/?locale=es_ES" target="_blank"><img src="./images/spmcorpodat-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#" target="_blank"><img src="./images/spmtecnica-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://soulmedical.es/" target="_blank"><img src="./images/soulmedical-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://puntotramite.es/" target="_blank"><img src="./images/puntotramite-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.gruposancristobal.es/" target="_blank"><img src="./images/sancristobal-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.tradiscor.com/" target="_blank"><img src="./images/tradiscor-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row">
+                    <div class="col-2">
+                        <a href="https://arimaquinaria.com/" target="_blank"><img src="./images/ari-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://mamcordoba.com/" target="_blank"><img src="./images/mam-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://canoliva.com/" target="_blank"><img src="./images/canoliva-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://romafisioterapia.com/" target="_blank"><img src="./images/romafisioterapia-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://casaruralelolmo.com/" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h5 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2024</h5>
+            </div>
+            <div class="row">
                 <div class="col-2">
                 </div>
-                <div class="col-2">
+                <div class="col-1">
+                    <a href="https://hotelabadi.com/" target="_blank"><img src="./images/abadi-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-1">
+                    <a href="https://www.facebook.com/DeportesFernandoPinedaRunning/?locale=es_ES" target="_blank"><img src="./images/fernandopineda-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-1">
+                    <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-1">
+                    <a href="https://www.emacsa.es/" target="_blank"><img src="./images/emacsa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-1">
+                    <a href="https://abogados-en-cordoba.es/" target="_blank"><img src="./images/kelsen-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-1">
+                    <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
+                </div>
+                <div class="col-1">
                     <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-4">
-                    <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-2">
+                <div class="col-1">
                     <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
                 <div class="col-2">
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-3">
-                </div>
-                <div class="col-3">
-                    <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-3">
-                    <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-3">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-8">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2024</h2>
-                </div>
-                <div class="row">
-                    <div class="col-2">
-                    </div>
-                    <div class="col-4">
-                        <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-4">
-                        <a href="https://www.innovaocular.com/" target="_blank"><img src="./images/innovaocular-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2024</h2>
-                </div>
-                <div class="row">
-                    <div class="col-3">
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-5">
-                    </div>
-                    <div class="col-2">
-                        <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-5">
-                    </div>
-                </div>
-            </div>
+        </div>
         </div>
         <div class="container blue-custom-bg">
             <div class="row">
