--- a/2022.html
+++ b/2022.html
@@ -429,7 +429,7 @@
                         <a href="https://canoliva.com/" target="_blank"><img src="./images/canoliva-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://romafisioterapia.com/" target="_blank"><img src="./images/romafisioterapia-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://romafisioterapia.com/" target="_blank"><img src="./images/romafisioterapia-logo-blanco.PNG" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://casaruralelolmo.com/" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
@@ -443,28 +443,32 @@
             <div class="row">
                 <div class="col-2">
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <a href="https://hotelabadi.com/" target="_blank"><img src="./images/abadi-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <a href="https://www.facebook.com/DeportesFernandoPinedaRunning/?locale=es_ES" target="_blank"><img src="./images/fernandopineda-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <a href="https://www.emacsa.es/" target="_blank"><img src="./images/emacsa-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
+                </div>
+                <div class="col-2">
+                </div>
+                <div class="col-2">
                     <a href="https://abogados-en-cordoba.es/" target="_blank"><img src="./images/kelsen-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
-                <div class="col-1">
+                <div class="col-2">
                     <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
                 </div>
                 <div class="col-2">
