--- a/contacto.html
+++ b/contacto.html
@@ -2,6 +2,15 @@
 <html lang="es">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFNW9DSY83"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VFNW9DSY83');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -156,92 +165,153 @@
     <!-- FOOTER -->
     <footer class="site-footer blue-custom-bg">
         <div class="container">
+
             <div class="row">
+
                 <div class="col-12">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners 2024</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-4">
-                    <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-4">
-                    <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-4">
-                    <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-2">
-                </div>
-                <div class="col-2">
-                    <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-4">
-                    <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-2">
-                    <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-2">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-3">
-                </div>
-                <div class="col-3">
-                    <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-3">
-                    <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
-                </div>
-                <div class="col-3">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-8">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2024</h2>
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores Principales 2024</h2>
                 </div>
                 <div class="row">
-                    <div class="col-2">
-                    </div>
                     <div class="col-4">
-                        <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://www.spg-pack.com/" target="_blank"><img src="./images/spg-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-4">
                         <a href="https://www.innovaocular.com/" target="_blank"><img src="./images/innovaocular-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
-                    <div class="col-2">
+                    <div class="col-4">
+                        <a href="https://superatesports.es/" target="_blank"><img src="./images/superate-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
+
             <div class="row">
-                <div class="col-4">
-                    <h2 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2024</h2>
+                <div class="col-12">
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">Partners Institucionales 2024</h2>
                 </div>
                 <div class="row">
                     <div class="col-3">
+                        <a href="https://www.imdcordoba.es/" target="_blank"><img src="./images/imdeco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://dipucordoba.es" target="_blank"><img src="./images/diputacion-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://obejo.es/" target="_blank"><img src="./images/obejo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.uco.es/" target="_blank"><img src="./images/uco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.uco.es/empresa/ucodeporte/" target="_blank"><img src="./images/ucodeporte-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://fadmes.es/" target="_blank"><img src="./images/fadmes-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.juntadeandalucia.es/organismos/turismoculturaydeporte.html" target="_blank"><img src="./images/junta-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://tdahcordoba.es/" target="_blank"><img src="./images/tdah-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-5">
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.ajeandalucia.org/cordoba/" target="_blank"><img src="./images/aje-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-5">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores 2024</h3>
+                </div>
+                <div class="row">
+                    <div class="col-3">
+                        <a href="https://www.facebook.com/p/Grupo-Corpodat-SPM-100063693216622/?locale=es_ES" target="_blank"><img src="./images/spmcorpodat-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#" target="_blank"><img src="./images/spmtecnica-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://soulmedical.es/" target="_blank"><img src="./images/soulmedical-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://puntotramite.es/" target="_blank"><img src="./images/puntotramite-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.gruposancristobal.es/" target="_blank"><img src="./images/sancristobal-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.tradiscor.com/" target="_blank"><img src="./images/tradiscor-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://saile.es/" target="_blank"><img src="./images/saile-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
                         <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
-                    <div class="col-3">
+                </div>
+            </div>
+            <div class="row">
+                <div class="row">
+                    <div class="col-2">
+                        <a href="https://arimaquinaria.com/" target="_blank"><img src="./images/ari-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://mamcordoba.com/" target="_blank"><img src="./images/mam-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
+                        <a href="https://canoliva.com/" target="_blank"><img src="./images/canoliva-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://romafisioterapia.com/" target="_blank"><img src="./images/romafisioterapia-logo-blanco.PNG" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://casaruralelolmo.com/" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <h5 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2024</h5>
+                </div>
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-2">
+                    </div>
+                    <div class="col-2">
+                        <a href="https://hotelabadi.com/" target="_blank"><img src="./images/abadi-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.facebook.com/DeportesFernandoPinedaRunning/?locale=es_ES" target="_blank"><img src="./images/fernandopineda-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
-                    <div class="col-5">
+                    <div class="col-2">
+                        <a href="https://www.emacsa.es/" target="_blank"><img src="./images/emacsa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                    </div>
+                    <div class="col-2">
+                    </div>
+                    <div class="col-2">
+                        <a href="https://abogados-en-cordoba.es/" target="_blank"><img src="./images/kelsen-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                     </div>
                 </div>
             </div>
