--- a/defaultsite.html
+++ b/defaultsite.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFNW9DSY83"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VFNW9DSY83');
+    </script>
     <meta http-equiv="refresh" content="0; url=index" />
 
     <meta charset="UTF-8">
@@ -15,7 +24,7 @@
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico">
 
-     <!-- CSS FILES -->
+    <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&display=swap" rel="stylesheet">
