--- a/defaultsite.html
+++ b/defaultsite.html
@@ -5,14 +5,18 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFNW9DSY83"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'G-VFNW9DSY83');
+        gtag('config', 'G-VFNW9DSY83');
     </script>
     <meta http-equiv="refresh" content="0; url=index" />
-
+    <meta name="description" content="Califa Mountain Festival es un fin de semana de carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
+    <meta name="keywords" content="trail, running, cxm, montaña, etapas, trailrunning">
+    <meta name="author" content="Califa Mountain Festival - CD Running Series">
+    <meta name="copyright" content="Califa Mountain Festival - CD Running Series">
+    <meta name="robots" content="index, follow" />
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
