--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFNW9DSY83"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'G-VFNW9DSY83');
+        gtag('config', 'G-VFNW9DSY83');
     </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Califa Mountain Festival es un fin de semana de carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
+    <meta name="keywords" content="trail, running, cxm, montaña, etapas, trailrunning">
+    <meta name="author" content="Califa Mountain Festival - CD Running Series">
+    <meta name="copyright" content="Califa Mountain Festival - CD Running Series">
+    <meta name="robots" content="index, follow" />
 
     <title>Califa Mountain Festival</title>
 
@@ -462,9 +465,13 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
+                        <a href="https://hotelabadi.com/" target="_blank"><img src="./images/abadi-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://hotelabadi.com/" target="_blank"><img src="./images/abadi-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://www.emacsa.es/" target="_blank"><img src="./images/emacsa-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://golfcordoba.com/" target="_blank"><img src="./images/golf-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://www.facebook.com/DeportesFernandoPinedaRunning/?locale=es_ES" target="_blank"><img src="./images/fernandopineda-logo-blanco.png" style="width:100%; height: auto" /></a>
@@ -473,25 +480,26 @@
                         <a href="https://www.nutridamente.com/" target="_blank"><img src="./images/nutridamente-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://www.emacsa.es/" target="_blank"><img src="./images/emacsa-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-2">
-                    </div>
-                    <div class="col-2">
-                    </div>
-                    <div class="col-2">
                         <a href="https://abogados-en-cordoba.es/" target="_blank"><img src="./images/kelsen-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-1">
                     </div>
                     <div class="col-2">
                         <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://semillassilvestres.com/" target="_blank"><img src="./images/semillassilvestres-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://saltamontes.net/" target="_blank"><img src="./images/saltamontes-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://aristarun.es/" target="_blank"><img src="./images/aristarun-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
-                    <div class="col-2">
+                    <div class="col-1">
                     </div>
                 </div>
             </div>
