--- a/2022.html
+++ b/2022.html
@@ -293,8 +293,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title text-blue-custom">Fotos Senderismo</h5>
                                             <a href="https://photos.app.goo.gl/ca82wCFpud4xXVxCA" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (TusResulta2)</a>
-                                            <a href="https://www.facebook.com/media/set/?vanity=aristarun&set=a.626630285600669" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (AristaRun)</a>
-                                            <a href="https://www.facebook.com/media/set/?set=a.10229918160963991&type=3" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (Alberto Alcántara)</a>
+                                            <a href="https://www.facebook.com/photo/?fbid=10229917647751161&set=a.10229917840235973" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-dark-custom-bg text-blue-custom"></i>Etapa 2 (Alberto Alcántara)</a>
                                         </div>
                                     </div>
                                 </div>
