--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                             <a class="nav-link click-scroll" href="2022">Edición 2022</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link click-scroll" href="blog">Blog</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link click-scroll" href="contacto">Contacto</a>
                         </li>
                     </ul>
