--- a/2022.html
+++ b/2022.html
@@ -89,6 +89,9 @@
                             <a class="nav-link click-scroll" href="contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link click-scroll" href="blog">Blog</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link click-scroll" href="index">Inicio</a>
                         </li>
                     </ul>
