--- a/blog.html
+++ b/blog.html
@@ -222,6 +222,9 @@
                     <div class="col-3">
                         <a href="https://www.tysa.es/" target="_blank"><img src="./images/tysa-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-3">
+                        <a href="https://www.sadeco.es/" target="_blank"><img src="./images/sadeco-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
