PlayerFactory logo y web

--- a/2023.html
+++ b/2023.html
@@ -399,6 +399,9 @@
                     <div class="col-3">
                         <a href="https://www.sadeco.es/" target="_blank"><img src="./images/sadeco-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-3">
+                        <a href="es" target="_blank"><img src="./images/playerfactory-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
