--- a/index.html
+++ b/index.html
@@ -590,7 +590,10 @@
                         <a href="https://www.sadeco.es/" target="_blank"><img src="./images/sadeco-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
-                        <a href="es" target="_blank"><img src="./images/playerfactory-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://www.playerfactory.es/" target="_blank"><img src="./images/playerfactory-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-3">
+                        <a href="https://www.mercadovictoria.com/" target="_blank"><img src="./images/mercadovictoria-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
@@ -606,6 +609,12 @@
                         <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://gallarcres.com/" target="_blank"><img src="./images/gallarcres-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://aflamencar.com/" target="_blank"><img src="./images/aflamencar-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://canoliva.com/" target="_blank"><img src="./images/canoliva-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
@@ -613,6 +622,9 @@
                     </div>
                     <div class="col-2">
                         <a href="https://casaruralelolmo.com/" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.sanalemo.es/" target="_blank"><img src="./images/sanalemo-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
