--- a/2024.html
+++ b/2024.html
@@ -130,7 +130,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title text-white">Tarifas</h5>
                                         <p class="text-white">Tarifa Reducida: 20 de Mayo 2024 00:00h a 15 de Agosto 2024 23:59h</p>
-                                        <p class="text-yellow-dark-custom">Tarifa Estándar: 16 de Mayo 2024 00:00h a 17 de Septiembre 2024 20:00h</p>
+                                        <p class="text-yellow-dark-custom">Tarifa Estándar: 16 de Agosto 2024 00:00h a 17 de Septiembre 2024 20:00h</p>
                                         <a href="2024/precios.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px yellow-light-custom-bg text-blue-custom">Tabla de tarifas</a>
 
                                     </div>
