--- a/2024.html
+++ b/2024.html
@@ -696,6 +696,9 @@
                     <div class="col-2">
                         <a href="https://www.sanalemo.es/" target="_blank"><img src="./images/sanalemo-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-2">
+                        <a href="https://supramar.es/" target="_blank"><img src="./images/supramar-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -710,6 +713,9 @@
                         <a href="https://www.emacsa.es/" target="_blank"><img src="./images/emacsa-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://wininnovacion.com/" target="_blank"><img src="./images/wininnovacion-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://golfcordoba.com/" target="_blank"><img src="./images/golf-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
@@ -720,8 +726,6 @@
                     </div>
                     <div class="col-2">
                         <a href="https://abogados-en-cordoba.es/" target="_blank"><img src="./images/kelsen-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-1">
                     </div>
                     <div class="col-2">
                         <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
@@ -736,9 +740,13 @@
                         <a href="https://aristarun.es/" target="_blank"><img src="./images/aristarun-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://eosiberica.es/" target="_blank"><img src="./images/eosiberica-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
-                    <div class="col-1">
+                    <div class="col-2">
+                        <a href="https://teamergy.es/" target="_blank"><img src="./images/teamergy-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.helvetia.es/" target="_blank"><img src="./images/helvetia-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
@@ -765,7 +773,6 @@
             </div>
         </div>
     </footer>
-
     <!--
 
     T e m p l a t e M o
